added post, put, delete functionality

--- a/app/views/task.html.erb
+++ b/app/views/task.html.erb
@@ -9,7 +9,7 @@
     <h1> Task </h1>
     <ul>
 
-      <li>| <%= @task.id %> | <%= @task.body %> | <%= @task.completed %> |</li>
+      <li><%= @task.body %> -- <%= @task.completed %></li>
 
     </ul>
     <header>
