--- a/app/views/all_tasks.html.erb
+++ b/app/views/all_tasks.html.erb
@@ -7,11 +7,11 @@
   </head>
   <body>
     <h1> All Tasks! </h1>
-    <ul>
+    <ol>
       <% @all_tasks.each do |task| %>
-      <li>| <%= task.id %> | <%= task.body %> | <%= task.completed %> |</li>
+      <li><%= task.body %> -- <%= task.completed %></li>
       <% end %>
-    </ul>
+    </ol>
     <header>
     </header>
     <main class="main1">
