added redirection to index when objects marked as complete

--- a/app/views/complete_tasks.html.erb
+++ b/app/views/complete_tasks.html.erb
@@ -13,7 +13,7 @@
     <% else %>
     <ol>
       <% @complete_tasks.each do |task| %>
-        <li><%= task.body %> -- <%= task.completed %></li>
+        <li><%= task.body %> &#x2714;</li>
       <% end %>
     </ol>
     <% end %>
