--- a/app/views/incomplete_tasks.html.erb
+++ b/app/views/incomplete_tasks.html.erb
@@ -12,7 +12,7 @@
     <% else %>
     <ol>
       <% @incomplete_tasks.each do |task| %>
-        <li><%= task.body %> -- <%= task.completed %></li>
+        <li><%= task.body %> &#x2718;</li>
       <% end %>
     </ol>
     <% end %>
