--- a/app/views/all_tasks.html.erb
+++ b/app/views/all_tasks.html.erb
@@ -6,12 +6,27 @@
     <title></title>
   </head>
   <body>
-    <h1> All Tasks! </h1>
-    <ol>
-      <% @all_tasks.each do |task| %>
-      <li><%= task.body %> -- <%= task.completed %></li>
-      <% end %>
-    </ol>
+    <h1> Incomplete Tasks! </h1>
+    <% if @incomplete_tasks.empty? %>
+      You have no Incompleted Tasks
+    <% else %>
+      <ol>
+        <% @incomplete_tasks.each do |task| %>
+        <li><%= task.body %> &#x2718; <a href="/tasks/<%= task.id %>/complete">Complete</a></li>
+        <% end %>
+      </ol>
+    <% end %>
+
+    <h1> Complete Tasks! </h1>
+    <% if @complete_tasks.empty? %>
+      You have no Completed Tasks
+    <% else %>
+      <ol>
+        <% @complete_tasks.each do |task| %>
+        <li><%= task.body %> &#x2714;</li>
+        <% end %>
+      </ol>
+    <% end %>
     <header>
     </header>
     <main class="main1">
