--- a/app/views/all_tasks.html.erb
+++ b/app/views/all_tasks.html.erb
@@ -12,7 +12,7 @@
     <% else %>
       <ol>
         <% @incomplete_tasks.each do |task| %>
-        <li><%= task.body %> &#x2718; <a href="/tasks/<%= task.id %>/complete">Complete</a></li>
+        <li><%= task.body %> &#x2718; <a href="/tasks/<%= task.id %>/complete?back=tasks">Complete</a></li>
         <% end %>
       </ol>
     <% end %>
