--- a/app/views/incomplete_tasks.html.erb
+++ b/app/views/incomplete_tasks.html.erb
@@ -12,7 +12,7 @@
     <% else %>
     <ol>
       <% @incomplete_tasks.each do |task| %>
-        <li><%= task.body %> &#x2718;</li>
+        <li><%= task.body %> &#x2718;<a href="/tasks/<%= task.id %>/complete?back=incomplete">Complete</a></li>
       <% end %>
     </ol>
     <% end %>
