fixed redirects using optional params

--- a/app/views/all_tasks.html.erb
+++ b/app/views/all_tasks.html.erb
@@ -6,6 +6,9 @@
     <title></title>
   </head>
   <body>
+    <form>
+      Search: <input type="text" name="search"><br>
+    </form>
     <h1> Incomplete Tasks! </h1>
     <% if @incomplete_tasks.empty? %>
       You have no Incompleted Tasks
