--- a/app/views/task.html.erb
+++ b/app/views/task.html.erb
@@ -1,20 +1,34 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css" charset="utf-8">
-    <link rel="stylesheet" href="" charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine">
+    <link rel="stylesheet" href="/assets/main.css" charset="utf-8">
     <meta charset="utf-8">
-    <title></title>
+    <title>Single Task</title>
   </head>
   <body>
-    <h1> Task </h1>
-    <ul>
-
-      <li><%= @task.body %> -- <%= @task.completed %></li>
-
+    <nav class="nav">
+      <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/tasks/incomplete">Incomplete</a></li>
+      <li><a href="/tasks/complete">Complete</a></li>
+      <li>
+        <form>
+          Search: <input type="text" name="search"><br>
+        </form>
+        </li>
     </ul>
-    <header>
-    </header>
-    <main class="main1">
+    </nav>
+    <main>
+      <div class="main1">
+        <h1> Task </h1>
+        <ul>
+
+          <p><%= @task.body %> -- <%= @task.completed %></p>
+
+        </ul>
+      </div>
+
     </main>
     <footer>
     </footer>
