fixed bug when displaying individual tasks

--- a/app/views/task.html.erb
+++ b/app/views/task.html.erb
@@ -21,12 +21,11 @@
     </nav>
     <main>
       <div class="main1">
-        <h1> Task </h1>
-        <ul>
+        <h1> <%= @title %> </h1>
 
-          <p><%= @task.body %> -- <%= @task.completed %></p>
+          <p><%= @task.body %></p>
 
-        </ul>
+
       </div>
 
     </main>
