--- a/app/views/assets/main.css
+++ b/app/views/assets/main.css
@@ -53,7 +53,7 @@ main {
   float: right;
   text-align: right;
   text-decoration: none;
-  color: #5E412F;
+  color: #FCEBB6;
   font-size: 10px;
   background-image: linear-gradient(to top, #F0A830, #F07818);
 }
